--- a/src/scc/App.css
+++ b/src/scc/App.css
@@ -20,3 +20,19 @@
 .App-link {
   color: #09d3ac;
 }
+
+.block {
+  opacity: 0.2;
+  height: 248px;
+  border-radius: 10px;
+  border: 1px solid rgba(0, 0, 0,0.3);
+  margin-top: 15px;
+  margin-right: 15px;
+  padding: 5px;
+  background-color: rgb(120, 180, 130);
+  box-shadow: 11px 11px 10px rgba(0,0,0,0.7);
+}
+
+.block:hover {
+  opacity: 1;
+}
