--- a/src/scc/header.css
+++ b/src/scc/header.css
@@ -50,6 +50,11 @@
   padding-top: 15px;
 }
 
+a {
+  text-decoration: none;
+  color: white;
+}
+
 .lowerLogo {
   font-family: 'Century Gothic', sans-serif;
   font-size: 12px;
