--- a/src/scc/header.css
+++ b/src/scc/header.css
@@ -1,103 +1,116 @@
 .header {
-  height: 100px;
-  color: white;
+    height: 100px;
+    color: white;
 }
 
 .headerButton {
-  font-family: Tahoma, sans-serif;
-  font-size: 17px;
-  padding-top: 35px;
-  height: 100px;
+    font-family: Tahoma, sans-serif;
+    font-size: 17px;
+    padding-top: 35px;
+    height: 100px;
 }
-.btn-header{
-  padding: 0;
-  height: 35px;
-  width: 100%;
-  border-radius: 0;
+
+.btn-header {
+    padding: 0;
+    height: 35px;
+    width: 100%;
+    border-radius: 0;
 }
 
 .dropdown-toggle {
-  font-family: Tahoma, sans-serif;
-  font-size: 17px;
-  color: white;
-  margin-top: -4px;
+    font-family: Tahoma, sans-serif;
+    font-size: 17px;
+    color: white;
+    margin-top: -4px;
 }
 
 .headerButton:hover, .btn-header:hover, .dropdown-toggle:hover {
-  color: rgb(235, 235, 235);
+    color: rgb(235, 235, 235);
 
 }
 
 .no-arrow::after {
-  display: none;
+    display: none;
 }
 
 .no-arrow {
-  border: none;
-  background-color: rgba(0,0,0,0);
+    border: none;
+    background-color: rgba(0, 0, 0, 0);
 }
 
 
 .no-arrow:focus, .no-arrow:active {
-  box-shadow: none;
+    box-shadow: none;
 }
 
 .engLogo {
-  font-family: 'Century Gothic', sans-serif;
-  font-size: 28px;
-  padding-top: 15px;
+    font-family: 'Century Gothic', sans-serif;
+    font-size: 28px;
+    padding-top: 15px;
 }
 
 a, a:hover {
-  text-decoration: none;
-  color: white;
+    text-decoration: none;
+    color: white;
 }
 
 .lowerLogo {
-  font-family: 'Century Gothic', sans-serif;
-  font-size: 12px;
-  text-transform: uppercase;
-  letter-spacing: 5px;
-  line-height: 22px;
-  color: rgb(255, 255, 255);
-  text-shadow: none;
-  padding-left: 3px;
-  padding-right: 3px;
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'Century Gothic', sans-serif;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    line-height: 22px;
+    color: rgb(255, 255, 255);
+    text-shadow: none;
+    padding-left: 3px;
+    padding-right: 3px;
+    font-weight: normal;
+    font-style: normal;
 }
 
 .search {
-  margin-top: 30px;
+    margin-top: 30px;
 }
 
 .dropdown-menu {
-  background-color: #333;
+    background-color: #333;
 }
 
-.dropdown-item {
-  color: #fff;
-  background-color: #333;
-  border: none;
+.dropdown-item, .dropdown-lang {
+    height: 37px;
+    width: 100%;
+    color: #fff;
+    background-color: #333;
+    border: none;
 }
- .dropdown-item.active {
-  color: #fff;
-  background-color: rgb(64, 172, 98);
+
+.dropdown-lang:hover {
+    background-color: white;
+    color: black;
+}
+
+.dropdown-item.active {
+    color: #fff;
+    background-color: rgb(64, 172, 98);
 }
 
 .user {
-  border-radius: 50%;
-  background-color: rgb(70, 130, 80);
-  width: 35px;
-  height: 35px;
-  padding: 4px;
+    border-radius: 50%;
+    background-color: rgb(70, 130, 80);
+    width: 35px;
+    height: 35px;
+    padding: 4px;
 }
 
 .logo {
-  color: white;
-  text-decoration: none;
+    color: white;
+    text-decoration: none;
 }
 
 .new-container {
-  padding-top: 15px;
+    padding-top: 15px;
+}
+
+.no-arrow:focus {
+    outline: none;
 }
