--- a/src/scc/video.css
+++ b/src/scc/video.css
@@ -129,6 +129,10 @@
   background: rgba(2, 178, 205, 0.56);
 }
 
+.badge {
+  margin-bottom: 10px;
+}
+
 .jello-diagonal-1 {animation:jello-diagonal-1 .8s both}
 
 @keyframes jello-diagonal-1{0%{transform:skew(0deg 0deg)}30%{transform:skew(25deg 25deg)}40%{transform:skew(-15deg,-15deg)}50%{transform:skew(15deg,15deg)}65%{transform:skew(-5deg,-5deg)}75%{transform:skew(5deg,5deg)}100%{transform:skew(0deg 0deg)}}
