--- a/src/scc/footer.css
+++ b/src/scc/footer.css
@@ -6,6 +6,7 @@
     position: fixed;
     bottom: 0;
     width: 100%;
+    background: linear-gradient(rgb(54, 150, 86), rgb(64, 172, 98));
 }
 
 .footer-premium {
