--- a/src/scc/learning.css
+++ b/src/scc/learning.css
@@ -33,7 +33,7 @@ select.form-control {
 
 .words-hint {
     padding: 3px;
-    margin: 10px 0 130px 0;
+    margin: 10px 0;
 }
 
 button.title_sound {
