--- a/src/scc/header.css
+++ b/src/scc/header.css
@@ -50,7 +50,7 @@
     padding-top: 15px;
 }
 
-a, a:hover {
+.headerButton>a, .headerButton>a:hover {
     text-decoration: none;
     color: white;
 }
