--- a/src/scc/video.css
+++ b/src/scc/video.css
@@ -154,6 +154,18 @@
   top: 5px;
 }
 
+.selected-left {
+  background-color: green;
+  color: white;
+  height: 32px;
+  font-size: 22px;
+  border-radius: 50%;
+  position: absolute;
+  left: 53px;
+  z-index: 10;
+  top: 5px;
+}
+
 .jello-diagonal-1 {animation:jello-diagonal-1 .8s both}
 
 @keyframes jello-diagonal-1{0%{transform:skew(0deg 0deg)}30%{transform:skew(25deg 25deg)}40%{transform:skew(-15deg,-15deg)}50%{transform:skew(15deg,15deg)}65%{transform:skew(-5deg,-5deg)}75%{transform:skew(5deg,5deg)}100%{transform:skew(0deg 0deg)}}
