--- a/src/scc/header.css
+++ b/src/scc/header.css
@@ -130,3 +130,5 @@ h1 {
 .display-none {
     display: none;
 }
+@media only screen
+and (max-device-width : 768px){ .hide-header { display: none; }}
