--- a/src/scc/course.css
+++ b/src/scc/course.css
@@ -20,12 +20,14 @@
 .main {
     display: flex;
     flex-direction: row;
+    padding-left: 10px;
 }
 
 input[type="checkbox"]{
     width: 20px;
     height: 20px;
-    margin-left: 1px;
+    margin-top: 1px;
+    margin-left: -25px;
 }
 
 @media only screen
