--- a/src/scc/course.css
+++ b/src/scc/course.css
@@ -23,6 +23,10 @@
     padding-left: 10px;
 }
 
+.addButton {
+    margin-top: 10px;
+}
+
 input[type="checkbox"]{
     width: 20px;
     height: 20px;
