--- a/src/scc/footer.css
+++ b/src/scc/footer.css
@@ -22,3 +22,37 @@
 .footer-item {
     padding: 12px;
 }
+
+#heartbeat {
+    display: inline-block;
+}
+
+.heartbeat {
+    animation: heartbeat 1.5s ease-in-out infinite both;
+    color: #9ae2fd;
+    font-weight: 700;
+}
+
+@keyframes heartbeat {
+    from {
+        transform: scale(1);
+        transform-origin: center center;
+        animation-timing-function: ease-out;
+    }
+    10% {
+        transform: scale(0.9);
+        animation-timing-function: ease-in;
+    }
+    17% {
+        transform: scale(1.3);
+        animation-timing-function: ease-out;
+    }
+    33% {
+        transform: scale(0.85);
+        animation-timing-function: ease-in;
+    }
+    45% {
+        transform: scale(1);
+        animation-timing-function: ease-out;
+    }
+}
