--- a/src/scc/course.css
+++ b/src/scc/course.css
@@ -12,6 +12,10 @@
     z-index: -1;
 }
 
+.behind {
+    z-index: -1;
+}
+
 .card-body, .card-header {
     padding: 0.7rem 1.25rem;
     border-bottom: 1px solid rgba(0,0,0,.125);
