--- a/src/scc/footer.css
+++ b/src/scc/footer.css
@@ -56,3 +56,6 @@
         animation-timing-function: ease-out;
     }
 }
+
+@media only screen
+and (max-device-width : 768px){ .footer-premium { display: none; }}
