--- a/src/scc/header.css
+++ b/src/scc/header.css
@@ -135,4 +135,4 @@ h1 {
     visibility: hidden;
 }
 @media only screen
-and (max-device-width : 768px){ .hide-header { display: none; }}
+and (max-device-width : 768px){ .hide-header, .hidden { display: none; }}
